[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.3.3,<9"]

[project]
name = "cypress-ticket-scraper"
version = "0.1.0"
description = ""
authors = [{name = "Jasper Chan", email = "jasperchan515@gmail.com"}]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = ["requests>=2.32.3,<3", "pytz>=2024.2,<2025"]

[project.scripts]
cypress-ticket-scraper = "cypress_ticket_scraper.main:main"
